--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    I am Arya Sekhar Bandopadgyay. <br></h1>
+                    I am Arya Sekhar Bandopadhyay. <br></h1>
                     <p id="me">Data Science/Machine Learning/Deep Learning  <br>
                     BlockChain/MEAN Stack/Beta-MSP/Tech Lead-MSPC SRM
                     </p>
