--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                 <div class="stats__count">
                     15
                 </div>
-                <h4>Corses Completed</h4>
+                <h4>Courses Completed</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
@@ -832,25 +832,27 @@
                 <h3>Contact</h3>
                 <h1>Say Hello.</h1>
                 
-                <p class="lead">I am Arya Sekhar Bandopadhyay, an Undergraduate college student. I am open to conducting workshops or working on freelancing projects. Drop a text to know more !</p>
+                <p class="lead">I am Arya Sekhar Bandopadhyay, an Undergraduate college student. I am open to conducting workshops or working on freelancing projects. Drop a text to know more !
+                    <br>For emerency and immediate response, use the Chat Widget on the right !
+                </p>
             </div>
         </div>
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="">
+                <form name="contactForm" method="post" action="mailto:aryasekharbandopadhyay@gmail.com">
                     <fieldset>
     
-                    <div class="form-field">
+                    <div class="form-field" name="name">
                         <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
-                    <div class="form-field">
+                    <div class="form-field" name="email">
                         <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
                     </div>
-                    <div class="form-field">
+                    <div class="form-field" name="subject">
                         <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
                     </div>
-                    <div class="form-field">
+                    <div class="form-field" name="message">
                         <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
                     <div class="form-field">
