--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 <h1>Say Hello.</h1>
                 
                 <p class="lead">I am Arya Sekhar Bandopadhyay, an Undergraduate college student. I am open to conducting workshops or working on freelancing projects. Drop a text to know more !
-                    <br>For emerency and immediate response, use the Chat Widget on the right !
+                    <br>For Emergency and Immediate Response, use the Chat Widget on the right !
                 </p>
             </div>
         </div>
