--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
                 <p>I am a 3rd year B.Tech Undergraduate from SRM Institute of Science and Technology. Regarding Data Science, I have attended Winter School on Data Science with Python and that’s where my work started. I have completed IBM Professional Data Science Certification from Coursera. I have relative experience working with Tableau, Power BI, Python and Visualizations using Matplotlib, Seaborn, Folium and Plotly. I have created Dashboards in Tableau.
 
                     I have worked with Regression models and stock market analysis using LSTM memory units. I have worked with backend Log files in my Internships to find meaningful patterns and Visualize them using Highcharts. I am thorough in Statistical models and Hypothesis Tests. I have worked as a Data Science Intern in kaashiv Infotech performing customer clustering, and OVONTS performing log file analysis and customer purchase behavior Analysis.
+
                 </p>
+                <p>I am Currently Working For RedFox Labs in collaboration with top tier companies for a statistical site as well as for game research and developement. Parallely I am working on a blockchain based project under UP Govt Police. </p>
                     <p>
                         I have worked on a lot of projects in Image Processing and I am quite familiar with objects detection approaches as well as image augmentation processes using Open CV. I have worked with GAN for Image Generation. Recently I have worked with Image classification approaches in real world to create a full stack application for automatic detection and segregation of garbage type for Smart India Hackathon. I am familiar with CNN architectures and optimizers and different loss functions and also with Transfer Learning approaches. I have some expertise working with Natural Language Processing and Natural Language Generation as well. I have worked on small projects like Email Spam classifier, Text Summarizer, Text Parsers and Image Caption Generators. I am familiar with Stochastic as well as Rule Based Approaches. I have relative Knowledge about BlockChain System including SHA256 hashing technique, Distributed P2P Networks and the Consensus principles. Relatively familier with Nonces and Cryptocurrencies including Bitcoin and Etherium.	
                 </p>
@@ -196,7 +198,11 @@
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
                     <strong>Python and Flask</strong>
-                    </li> 
+                    </li>
+                    <li>
+                        <div class="progress percent70"><span>70%</span></div>
+                        <strong>React</strong>
+                        </li> 
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
                     <strong>HTML5</strong>
@@ -247,8 +253,63 @@
                 <h3>My Work Experience and Education.</h3>
             </div>
 
-            <div class="col-six tab-full left">
+            <div class="col-full tab-full left">
                 <div class="timeline">
+
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">May 2020 - Present</p>
+                            <h3>Dataly</h3>
+                            <h5>CEO and Co-Founder</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>Working with Like minded people and moving forward with our innovative Blockchain based Business Model.
+
+                            </p>
+                        </div>
+                    </div> <!-- end timeline__block -->
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">June 2020 - Present</p>
+                            <h3>RedFox Labs</h3>
+                            <h5>Game Researcher</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>Working on ground research of games and performing its user attribute analysis in collaboration with top Game Developing firms.
+
+                            </p>
+                        </div>
+                    </div> <!-- end timeline__block -->
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">March 2020 - Present</p>
+                            <h3>RedFox Labs</h3>
+                            <h5>BlockChain and Data Analytics</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>Working on Statistical Site including its UI, Data analysis and Integration in collaboration with top tier companies.
+
+                            </p>
+                        </div>
+                    </div> <!-- end timeline__block -->
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">Feb 2020 - Present</p>
+                            <h3>SRMIST in Collaboration with UP Police</h3>
+                            <h5>BlockChain Researcher</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>Working on ground research of Blockchain and hyper ledger networks and using public sourcing powers to harness productive apps.
+
+                            </p>
+                        </div>
+                    </div> <!-- end timeline__block -->
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
@@ -287,11 +348,7 @@
                         </div>
                     </div> <!-- end timeline__block -->
 
-                </div> <!-- end timeline -->
-            </div> <!-- end left -->
-
-            <div class="col-six tab-full right">
-                <div class="timeline">
+                
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
@@ -613,11 +670,173 @@
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/Common Project Template.jpg" class="thumb-link" title="Chatbot" data-size="1050x700">
+                                <img src="images/portfolio/Common Project Template.jpg" 
+                                     srcset="images/portfolio/Common Project Template.jpg 1x, images/portfolio/Webp.net-resizeimage.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                A simple games based on JQuery
+                            </h3>
+                            <p class="item-folio__cat">
+                                Web Developement <br>
+                            </p>
+                        </div>
+
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>A Simple Game based on HTML5, CSS and Jquery and its animations <br>
+                            <a href="https://github.com/aryasbandopadhyay/Fruits-Game-HTML">Project Link</a></p>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/Common Project Template.jpg" class="thumb-link" title="Chatbot" data-size="1050x700">
+                                <img src="images/portfolio/Common Project Template.jpg" 
+                                     srcset="images/portfolio/Common Project Template.jpg 1x, images/portfolio/Webp.net-resizeimage.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                GAN Implementation In Keras
+                            </h3>
+                            <p class="item-folio__cat">
+                                Image Processing <br>
+                            </p>
+                        </div>
+
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>Different Types of GAN implemented in Keras <br>
+                            <a href="https://github.com/aryasbandopadhyay/GAN-in-Keras">Project Link</a></p>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/Common Project Template.jpg" class="thumb-link" title="Chatbot" data-size="1050x700">
+                                <img src="images/portfolio/Common Project Template.jpg" 
+                                     srcset="images/portfolio/Common Project Template.jpg 1x, images/portfolio/Webp.net-resizeimage.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Drawing App using HTML canvas
+                            </h3>
+                            <p class="item-folio__cat">
+                                Web Developement <br>
+                            </p>
+                        </div>
+
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>A simple drawing app using HTML canvas , JavaScript <br>
+                            <a href="https://github.com/aryasbandopadhyay/Drawing-App-HTML-Canvas">Project Link</a></p>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/Common Project Template.jpg" class="thumb-link" title="Chatbot" data-size="1050x700">
+                                <img src="images/portfolio/Common Project Template.jpg" 
+                                     srcset="images/portfolio/Common Project Template.jpg 1x, images/portfolio/Webp.net-resizeimage.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Diabetes Prediction Interface
+                            </h3>
+                            <p class="item-folio__cat">
+                                Machine Learning <br>
+                            </p>
+                        </div>
+
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>A web Interface to predict diabetes based on ones symptoms</p> <br>
+                            <a href="https://github.com/aryasbandopadhyay/Diabetes-Prediction-Web-Interface">Project Link</a></p>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
 
             </div>
         </div> <!-- end masonry -->
 
     </section> <!-- end works -->
+    <!-- <div>
+        <div class="row">
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="./images/achievements/WhatsApp Image 2020-06-13 at 16.23.25.jpeg">
+                  <img src="./images/achievements/WhatsApp Image 2020-06-13 at 16.23.25.jpeg" alt="surakshacovid" style="width:30% padding:20px">
+                  <div class="caption">
+                    <p>Lorem ipsum...</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="/w3images/nature.jpg">
+                  <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+                  <div class="caption">
+                    <p>Lorem ipsum...</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="thumbnail">
+                <a href="/w3images/fjords.jpg">
+                  <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+                  <div class="caption">
+                    <p>Lorem ipsum...</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+    </div> -->
 
 
 
@@ -648,7 +867,7 @@
 
                 <div class="testimonials__slide">
                     <img src="images/portfolio/hyper-shot-1200x900-1-1200x900.png" alt="dash" class="testimonials__avatar">
-                    <p>Created an Interactive Dashboard on COVID19 issue with all the stats, Test centre locations as Well as trending global and local news. Earned laurels from seniors and faculty members.</p>
+                    <p>Created an Interactive Dashboard on COVID19 issue with all the stats, Test centre locations as Well as trending global and local news. Earned laurels from news channels and papers across the country and were praised by MNC's like amazon and Google.</p>
                     <div class="testimonials__author h06">
                         COVID-19
                         <span>2020</span>
@@ -779,7 +998,7 @@
 
             </div>
 
-        </div> <!-- end cta -->
+        </div> <! end cta -->
         
     <!-- </section> -->
 
@@ -806,13 +1025,13 @@
                     <a href="#"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
                 <div class="stats__count">
-                    11
+                    15
                 </div>
                 <h4>Projects Completed</h4>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    4
+                    6
                 </div>
                 <h4>Total Internships</h4> 
             </div>
