Adhikary spelling changed

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="https://drive.google.com/open?id=1ewlyViDB5tS8UDfQ7CZySUA1Eih_qagg" class="btn btn--primary full-width">Download My CV</a>
+                <a href="https://drive.google.com/file/d/1G4mcX8IVDeqN1Pw0j_zHxUeZ0sjbw26O/view?usp=sharing" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" class="btn full-width">Hire Me Now</a>
