--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/WhatsApp Image 2020-04-16 at 13.44.07.jpeg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/arya.jpeg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -859,6 +859,22 @@
                 <div class="testimonials__slide">
                     <img src="images/portfolio/award-icon-png-48529-free-icons-library-award-icon-png-1292_1283.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Won Best Paper Award in International Conferance on IOT 2020 held in SRM.Paper was Titled Cyber Criminal Detection using hotspot analysis</p>
+                    <div class="testimonials__author h06">
+                        SRMIST
+                        <span>2020</span>
+                    </div>
+                </div>
+                <div class="testimonials__slide">
+                    <img src="images/portfolio/award-icon-png-48529-free-icons-library-award-icon-png-1292_1283.jpg" alt="Author image" class="testimonials__avatar">
+                    <p>Received a funded project from UP Govt Police on News Verification using Blockchain</p>
+                    <div class="testimonials__author h06">
+                        SRMIST
+                        <span>2020</span>
+                    </div>
+                </div>
+                <div class="testimonials__slide">
+                    <img src="images/portfolio/award-icon-png-48529-free-icons-library-award-icon-png-1292_1283.jpg" alt="Author image" class="testimonials__avatar">
+                    <p>Received Internship offer from Vietnam based firm (RedFox Labs in collaboration with top tier companies)</p>
                     <div class="testimonials__author h06">
                         SRMIST
                         <span>2020</span>
